# yadro-test-task-tu

./: .clang-format  .gitignore  README.md  TODO.md
TapeDataInterface/: CMakeLists.txt  ITapeDev.hpp  TapeDev.cpp  TapeDev.hpp  TapeDevConf.cpp  TapeDevConf.hpp  TapeDevConfig.cpp  TapeDevConfig.hpp  TapeDevExceptions.hpp  TapeSorter.cpp  TapeSorter.hpp  main.cpp  utils.hpp
TapeDataInterface/tests/: CMakeLists.txt  unit_tests.cpp
TapeDataInterface/tests/tests-data/: bad_device_config.txt  device_config.txt
TapeDataInterface/tests/tests-data/tapes/: hard_tape.txt  medium_tape.txt  simple_tape.txt
doc/: program_dirs.md  tape_file_format.md
examples/ProgramData/config/: device_config.txt
examples/ProgramData/tape-data/: simple_tape.txt
